<resources>
    <string name="app_name">Cheque App</string>

    <!--    Navigation-->
    <string name="cd_nav_iv_new">New event</string>
    <string name="cd_nav_iv_history">Show history</string>

    <!--    Authorization-->
    <string name="auth_menu_tv_first_launch">Seems like it\'s your first launch</string>
    <string name="auth_menu_b_register">Register</string>
    <string name="auth_menu_b_login">Login</string>
    <string name="auth_register_tv_title">Please, enter your username and telegram tag</string>
    <string name="auth_register_tv_desc">IMPORTANT:\nWe will use telegram to notify you about new cheques. Please specify your real telegram tag</string>
    <string name="auth_register_et_username">Username</string>
    <string name="auth_register_et_telegram">\@telegram_tag</string>
    <string name="auth_register_b_submit">Submit</string>
    <string name="auth_register_tv_login"><u>Already have an account</u></string>
    <string name="auth_login_et_username">Enter your username…</string>
    <string name="auth_login_tv_register"><u>Don\'t have an account</u></string>
    <string name="auth_login_b_submit">Login</string>
    <string name="auth_login_tv_title">Log in</string>
    <string name="auth_login_tv_error">User not found, please check your username or register new account</string>
    <string name="auth_register_tv_error">This username is already occupied</string>

    <!--    New Event -->
    <string name="new_tv_title">Set name and date of event</string>
    <string name="new_tv_name">Name of event</string>
    <string name="new_tv_date_ph">Date: __.__.____</string>
    <string name="new_b_calendar_show">Change Date</string>
    <string name="new_b_to_users">Next</string>
    <string name="new_tv_step_1">Step 1/3</string>
    <string name="new_tv_title_users">Add participants</string>
    <string name="new_b_to_receipts">Next</string>
    <string name="new_tv_step_2">Step 2/3</string>
    <string name="new_b_back_to_names">Back</string>
    <string name="new_tv_users_spinner_label">Add participant:</string>
    <string name="new_tv_empty_users_list">Nobody selected</string>
    <string name="cd_iv_delete">Delete</string>
    <string name="new_receipts_tv_add">New cheque: </string>
    <string name="new_receipts_et_add_hint">Title</string>
    <string name="cd_iv_add">Add</string>
    <string name="new_tv_step_3">Step 3/3</string>
    <string name="new_b_finish">Finish</string>
    <string name="new_receipts_tv_title">Add cheques</string>
    <string name="rpb_b_edit">Edit</string>
    <string name="receipt_tv_payer">Payer:</string>
    <string name="receipt_et_position_hint">New position name…</string>
    <string name="receipt_b_confirm">Confirm</string>
    <string name="position_et_title">Input position title</string>
    <string name="position_et_price_hint">Input price</string>
    <string name="position_tv_new_part">New participant:</string>
    <string name="ppb_et_part">Part in percents</string>
    <string name="new_b_show_calendar_hide">Hide</string>
    <string name="new_names_error_date_is_null">Please, select date</string>
    <string name="new_names_error_name_is_null">Please, input name of event</string>
    <string name="new_uses_error_failed_to_load">Failed to load users</string>
    <string name="new_users_spinner_empty_ph">No available users</string>
    <string name="new_users_error_at_least_2">Please, select at least 2 users</string>
    <string name="new_receipts_error_unique">Receipt name must be unique for current event</string>
    <string name="new_receipts_error_no_receiptrs">Please add at least 1 cheque</string>
    <string name="new_receipts_tv_empty">No cheques added</string>
    <string name="receipt_error_unique_pos">Position name must be unique</string>
    <string name="receipt_error_negative_price">Price must be greater than zero</string>
    <string name="receipt_error_not_eq_to_one">Parts must be 1 in sum</string>
</resources>