<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    tools:context=".ui.newevent.NewEventNamesFragment">

    <TextView
        android:id="@+id/new_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/new_tv_title" />

    <EditText
        android:id="@+id/new_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_tv_title"
        android:autofillHints="no"
        android:layout_marginTop="30dp"
        android:hint="@string/new_tv_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/new_tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_tv_date_ph"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/new_b_show_calendar"
        app:layout_constraintTop_toBottomOf="@id/new_et_name" />

    <Button
        android:id="@+id/new_b_show_calendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_b_show_calendar"
        app:layout_constraintStart_toEndOf="@id/new_tv_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_et_name" />

    <CalendarView
        android:id="@+id/new_calendar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/new_tv_names_error"
        app:layout_constraintTop_toBottomOf="@id/new_tv_date"
        android:visibility="gone"
        android:background="#eee"
        tools:visibility="visible" />

    <Button
        android:id="@+id/new_b_to_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/new_b_to_users" />

    <TextView
        android:id="@+id/new_tv_names_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/new_b_to_users"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="An error has occurred"
        android:textColor="#f00" />

    <TextView
        android:id="@+id/new_tv_step_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_tv_step_1" />

</androidx.constraintlayout.widget.ConstraintLayout>