<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.newevent.receipts.NewReceiptFragment"
    android:padding="20dp">

    <EditText
        android:id="@+id/receipt_et_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="no"
        android:inputType="text"
        android:hint="@string/new_receipts_et_add_hint"
        tools:text="Burley Shop"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <TextView
        android:id="@+id/receipt_tv_payer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receipt_tv_payer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/receipt_payer_spinner"
        app:layout_constraintBottom_toBottomOf="@id/receipt_payer_spinner"
        android:textSize="18sp"
        android:textColor="@color/black" />

    <Spinner
        android:id="@+id/receipt_payer_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/receipt_tv_payer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/receipt_et_title"
        android:layout_marginStart="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/receipts_rv_positions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/receipt_payer_spinner"
        app:layout_constraintBottom_toTopOf="@id/receipt_b_add"
        android:layout_marginVertical="10dp"
        android:orientation="vertical" />

    <EditText
        android:id="@+id/receipt_et_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/receipt_b_add"
        app:layout_constraintBottom_toBottomOf="@id/receipt_b_add"
        app:layout_constraintEnd_toStartOf="@id/receipt_b_add"
        android:layout_marginEnd="10dp"
        android:autofillHints="no"
        android:inputType="text"
        android:hint="@string/receipt_et_position_hint" />

    <ImageView
        android:id="@+id/receipt_b_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:contentDescription="@string/cd_iv_add"
        android:src="@drawable/ic_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/receipt_b_confirm"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/receipt_tv_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/receipt_b_confirm"
        tools:text="An error has occurred"
        android:textColor="#f00" />

    <Button
        android:id="@+id/receipt_b_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/receipt_b_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>